kubernetes/wazuh/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wazuh
  labels:
    client: "wazuh-app"
