kubernetes/wazuh/namespace-deny.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: wazuh
  name: deny-traffic-to-wazuh-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          client: "wazuh-app"
